practica5.6/Sintactico.output
Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PRINCIPAL bloque

    3 $@2: %empty

    4 $@3: %empty

    5 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs $@3 sentencias FINBLOQUE

    6 $@4: %empty

    7 declar_variables_locales: VAR $@4 variables_locales PUNTOYCOMA
    8                         | %empty

    9 variables_locales: variables_locales cuerpo_declar_variables
   10                  | cuerpo_declar_variables

   11 cuerpo_declar_variables: tipo lista_variables PUNTOYCOMA
   12                        | error

   13 lista_variables: variable COMA lista_variables
   14                | variable error lista_variables
   15                | variable

   16 variable: IDENT

   17 declar_subprogs: declar_subprogs declar_subprog
   18                | %empty

   19 $@5: %empty

   20 $@6: %empty

   21 declar_subprog: $@5 cabecera_subprograma $@6 INICIO sentencias FIN PUNTOYCOMA

   22 $@7: %empty

   23 $@8: %empty

   24 cabecera_subprograma: PROCEDIMIENTO IDENT $@7 PARIZQ lista_parametros PARDER $@8 PUNTOYCOMA
   25                     | PROCEDIMIENTO IDENT PUNTOYCOMA

   26 lista_parametros: parametro PUNTOYCOMA lista_parametros
   27                 | parametro error PUNTOYCOMA lista_parametros
   28                 | parametro

   29 parametro: lista_variables DOSP tipo

   30 $@9: %empty

   31 sentencias: $@9 sentencia sentencias
   32           | %empty

   33 $@10: %empty

   34 sentencia: $@10 bloque
   35          | asignacion

   36 $@11: %empty

   37 $@12: %empty

   38 sentencia: $@11 si PUNTOYCOMA $@12

   39 $@13: %empty

   40 sentencia: $@13 mientras

   41 $@14: %empty

   42 sentencia: $@14 entrada

   43 $@15: %empty

   44 sentencia: $@15 salida

   45 $@16: %empty

   46 sentencia: $@16 for
   47          | llamada_funcion
   48          | variable AVANRETR PUNTOYCOMA
   49          | DOLAR variable PUNTOYCOMA

   50 asignacion: variable ASIGNACION expresion PUNTOYCOMA

   51 si: SI PARIZQ expresion PARDER ENTONCES sentencia

   52 @17: %empty

   53 $@18: %empty

   54 si: SI PARIZQ expresion PARDER ENTONCES sentencia @17 SINO $@18 sentencia

   55 $@19: %empty

   56 mientras: MIENTRAS PARIZQ expresion PARDER $@19 sentencia PUNTOYCOMA

   57 $@20: %empty

   58 entrada: LEER $@20 lista_variables PUNTOYCOMA

   59 $@21: %empty

   60 salida: ESCRIBIR $@21 lista_expresiones_cad PUNTOYCOMA

   61 $@22: %empty

   62 $@23: %empty

   63 for: PARA variable DOSP ASIGNACION expresion HASTA expresion HACER INICIO $@22 sentencia $@23 FIN PUNTOYCOMA

   64 expresion: PARIZQ expresion PARDER
   65          | OPUNARIO expresion
   66          | SUMRES expresion
   67          | expresion OPBINARIO expresion
   68          | expresion OPOR expresion
   69          | expresion OPRELACIONAL expresion
   70          | expresion SUMRES expresion
   71          | expresion OPAND expresion
   72          | expresion OPBINLISTA expresion
   73          | expresion ARROBA expresion
   74          | expresion ARROBA expresion MASMAS expresion
   75          | variable
   76          | constante
   77          | CORIZQ agregado CORDER
   78          | error

   79 lista_expresiones: expresion COMA lista_expresiones
   80                  | expresion

   81 lista_expresiones_cad: exp_cad COMA lista_expresiones_cad
   82                      | exp_cad

   83 exp_cad: expresion
   84        | CONSTCADENA

   85 constante: CONSTENTERA
   86          | CONSTLOGICA
   87          | CONSTREAL
   88          | CONSTCARACTER

   89 $@24: %empty

   90 llamada_funcion: IDENT PARIZQ $@24 lista_expresiones PARDER PUNTOYCOMA
   91                | IDENT PARIZQ PARDER PUNTOYCOMA

   92 agregado: agregado_enteros
   93         | agregado_reales
   94         | agregado_caracteres
   95         | agregado_booleanos
   96         | agregado_cadenas

   97 agregado_enteros: agregado_enteros COMA CONSTENTERA
   98                 | CONSTENTERA

   99 agregado_reales: agregado_reales COMA CONSTREAL
  100                | CONSTREAL

  101 agregado_caracteres: agregado_caracteres COMA CONSTCARACTER
  102                    | CONSTCARACTER

  103 agregado_booleanos: agregado_booleanos COMA CONSTLOGICA
  104                   | CONSTLOGICA

  105 agregado_cadenas: agregado_cadenas COMA CONSTCADENA
  106                 | CONSTCADENA

  107 tipo: LISTA TIPOBASICO
  108     | TIPOBASICO
  109     | error


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 12 14 27 78 109
    OPOR (258) 68
    OPAND (259) 71
    OPRELACIONAL (260) 69
    SUMRES (261) 66 70
    OPBINARIO (262) 67
    OPUNARIO (263) 65
    OPBINLISTA (264) 72
    ARROBA (265) 73 74
    MASMAS (266) 74
    ASIGNACION (267) 50 63
    CORIZQ (268) 77
    CORDER (269) 77
    TIPOBASICO (270) 107 108
    CONSTENTERA (271) 85 97 98
    CONSTLOGICA (272) 86 103 104
    CONSTREAL (273) 87 99 100
    CONSTCARACTER (274) 88 101 102
    CONSTCADENA (275) 84 105 106
    COMA (276) 13 79 81 97 99 101 103 105
    PARDER (277) 24 51 54 56 64 90 91
    PARIZQ (278) 24 51 54 56 64 90 91
    PUNTOYCOMA (279) 7 11 21 24 25 26 27 38 48 49 50 56 58 60 63 90 91
    INICIOBLOQUE (280) 5
    FINBLOQUE (281) 5
    VAR (282) 7
    SI (283) 51 54
    SINO (284) 54
    MIENTRAS (285) 56
    LEER (286) 58
    ESCRIBIR (287) 60
    HASTA (288) 63
    PRINCIPAL (289) 2
    PROCEDIMIENTO (290) 24 25
    DOSP (291) 29 63
    INICIO (292) 21 63
    FIN (293) 21 63
    ENTONCES (294) 51 54
    PARA (295) 63
    HACER (296) 63
    AVANRETR (297) 48
    DOLAR (298) 49
    LISTA (299) 107
    IDENT (300) 16 24 25 90 91


No terminales con las reglas donde aparecen

    $accept (46)
        on left: 0
    programa (47)
        on left: 2
        on right: 0
    $@1 (48)
        on left: 1
        on right: 2
    bloque (49)
        on left: 5
        on right: 2 34
    $@2 (50)
        on left: 3
        on right: 5
    $@3 (51)
        on left: 4
        on right: 5
    declar_variables_locales (52)
        on left: 7 8
        on right: 5
    $@4 (53)
        on left: 6
        on right: 7
    variables_locales (54)
        on left: 9 10
        on right: 7 9
    cuerpo_declar_variables (55)
        on left: 11 12
        on right: 9 10
    lista_variables (56)
        on left: 13 14 15
        on right: 11 13 14 29 58
    variable (57)
        on left: 16
        on right: 13 14 15 48 49 50 63 75
    declar_subprogs (58)
        on left: 17 18
        on right: 5 17
    declar_subprog (59)
        on left: 21
        on right: 17
    $@5 (60)
        on left: 19
        on right: 21
    $@6 (61)
        on left: 20
        on right: 21
    cabecera_subprograma (62)
        on left: 24 25
        on right: 21
    $@7 (63)
        on left: 22
        on right: 24
    $@8 (64)
        on left: 23
        on right: 24
    lista_parametros (65)
        on left: 26 27 28
        on right: 24 26 27
    parametro (66)
        on left: 29
        on right: 26 27 28
    sentencias (67)
        on left: 31 32
        on right: 5 21 31
    $@9 (68)
        on left: 30
        on right: 31
    sentencia (69)
        on left: 34 35 38 40 42 44 46 47 48 49
        on right: 31 51 54 56 63
    $@10 (70)
        on left: 33
        on right: 34
    $@11 (71)
        on left: 36
        on right: 38
    $@12 (72)
        on left: 37
        on right: 38
    $@13 (73)
        on left: 39
        on right: 40
    $@14 (74)
        on left: 41
        on right: 42
    $@15 (75)
        on left: 43
        on right: 44
    $@16 (76)
        on left: 45
        on right: 46
    asignacion (77)
        on left: 50
        on right: 35
    si (78)
        on left: 51 54
        on right: 38
    @17 (79)
        on left: 52
        on right: 54
    $@18 (80)
        on left: 53
        on right: 54
    mientras (81)
        on left: 56
        on right: 40
    $@19 (82)
        on left: 55
        on right: 56
    entrada (83)
        on left: 58
        on right: 42
    $@20 (84)
        on left: 57
        on right: 58
    salida (85)
        on left: 60
        on right: 44
    $@21 (86)
        on left: 59
        on right: 60
    for (87)
        on left: 63
        on right: 46
    $@22 (88)
        on left: 61
        on right: 63
    $@23 (89)
        on left: 62
        on right: 63
    expresion (90)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 50 51 54 56 63 64 65 66 67 68 69 70 71 72 73 74 79 80 83
    lista_expresiones (91)
        on left: 79 80
        on right: 79 90
    lista_expresiones_cad (92)
        on left: 81 82
        on right: 60 81
    exp_cad (93)
        on left: 83 84
        on right: 81 82
    constante (94)
        on left: 85 86 87 88
        on right: 76
    llamada_funcion (95)
        on left: 90 91
        on right: 47
    $@24 (96)
        on left: 89
        on right: 90
    agregado (97)
        on left: 92 93 94 95 96
        on right: 77
    agregado_enteros (98)
        on left: 97 98
        on right: 92 97
    agregado_reales (99)
        on left: 99 100
        on right: 93 99
    agregado_caracteres (100)
        on left: 101 102
        on right: 94 101
    agregado_booleanos (101)
        on left: 103 104
        on right: 95 103
    agregado_cadenas (102)
        on left: 105 106
        on right: 96 105
    tipo (103)
        on left: 107 108 109
        on right: 11 29


Estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 1 ($@1)

    programa  ir al estado 1
    $@1       ir al estado 2


Estado 1

    0 $accept: programa . $end

    $end  desplazar e ir al estado 3


Estado 2

    2 programa: $@1 . PRINCIPAL bloque

    PRINCIPAL  desplazar e ir al estado 4


Estado 3

    0 $accept: programa $end .

    $default  aceptar


Estado 4

    2 programa: $@1 PRINCIPAL . bloque

    INICIOBLOQUE  desplazar e ir al estado 5

    bloque  ir al estado 6


Estado 5

    5 bloque: INICIOBLOQUE . $@2 declar_variables_locales declar_subprogs $@3 sentencias FINBLOQUE

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 7


Estado 6

    2 programa: $@1 PRINCIPAL bloque .

    $default  reduce usando la regla 2 (programa)


Estado 7

    5 bloque: INICIOBLOQUE $@2 . declar_variables_locales declar_subprogs $@3 sentencias FINBLOQUE

    VAR  desplazar e ir al estado 8

    $default  reduce usando la regla 8 (declar_variables_locales)

    declar_variables_locales  ir al estado 9


Estado 8

    7 declar_variables_locales: VAR . $@4 variables_locales PUNTOYCOMA

    $default  reduce usando la regla 6 ($@4)

    $@4  ir al estado 10


Estado 9

    5 bloque: INICIOBLOQUE $@2 declar_variables_locales . declar_subprogs $@3 sentencias FINBLOQUE

    $default  reduce usando la regla 18 (declar_subprogs)

    declar_subprogs  ir al estado 11


Estado 10

    7 declar_variables_locales: VAR $@4 . variables_locales PUNTOYCOMA

    error       desplazar e ir al estado 12
    TIPOBASICO  desplazar e ir al estado 13
    LISTA       desplazar e ir al estado 14

    variables_locales        ir al estado 15
    cuerpo_declar_variables  ir al estado 16
    tipo                     ir al estado 17


Estado 11

    5 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs . $@3 sentencias FINBLOQUE
   17 declar_subprogs: declar_subprogs . declar_subprog

    PROCEDIMIENTO  reduce usando la regla 19 ($@5)
    $default       reduce usando la regla 4 ($@3)

    $@3             ir al estado 18
    declar_subprog  ir al estado 19
    $@5             ir al estado 20


Estado 12

   12 cuerpo_declar_variables: error .
  109 tipo: error .

    IDENT     reduce usando la regla 109 (tipo)
    $default  reduce usando la regla 12 (cuerpo_declar_variables)


Estado 13

  108 tipo: TIPOBASICO .

    $default  reduce usando la regla 108 (tipo)


Estado 14

  107 tipo: LISTA . TIPOBASICO

    TIPOBASICO  desplazar e ir al estado 21


Estado 15

    7 declar_variables_locales: VAR $@4 variables_locales . PUNTOYCOMA
    9 variables_locales: variables_locales . cuerpo_declar_variables

    error       desplazar e ir al estado 12
    TIPOBASICO  desplazar e ir al estado 13
    PUNTOYCOMA  desplazar e ir al estado 22
    LISTA       desplazar e ir al estado 14

    cuerpo_declar_variables  ir al estado 23
    tipo                     ir al estado 17


Estado 16

   10 variables_locales: cuerpo_declar_variables .

    $default  reduce usando la regla 10 (variables_locales)


Estado 17

   11 cuerpo_declar_variables: tipo . lista_variables PUNTOYCOMA

    IDENT  desplazar e ir al estado 24

    lista_variables  ir al estado 25
    variable         ir al estado 26


Estado 18

    5 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs $@3 . sentencias FINBLOQUE

    FINBLOQUE  reduce usando la regla 32 (sentencias)
    $default   reduce usando la regla 30 ($@9)

    sentencias  ir al estado 27
    $@9         ir al estado 28


Estado 19

   17 declar_subprogs: declar_subprogs declar_subprog .

    $default  reduce usando la regla 17 (declar_subprogs)


Estado 20

   21 declar_subprog: $@5 . cabecera_subprograma $@6 INICIO sentencias FIN PUNTOYCOMA

    PROCEDIMIENTO  desplazar e ir al estado 29

    cabecera_subprograma  ir al estado 30


Estado 21

  107 tipo: LISTA TIPOBASICO .

    $default  reduce usando la regla 107 (tipo)


Estado 22

    7 declar_variables_locales: VAR $@4 variables_locales PUNTOYCOMA .

    $default  reduce usando la regla 7 (declar_variables_locales)


Estado 23

    9 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce usando la regla 9 (variables_locales)


Estado 24

   16 variable: IDENT .

    $default  reduce usando la regla 16 (variable)


Estado 25

   11 cuerpo_declar_variables: tipo lista_variables . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 31


Estado 26

   13 lista_variables: variable . COMA lista_variables
   14                | variable . error lista_variables
   15                | variable .

    error  desplazar e ir al estado 32
    COMA   desplazar e ir al estado 33

    PUNTOYCOMA  reduce usando la regla 15 (lista_variables)
    DOSP        reduce usando la regla 15 (lista_variables)


Estado 27

    5 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs $@3 sentencias . FINBLOQUE

    FINBLOQUE  desplazar e ir al estado 34


Estado 28

   31 sentencias: $@9 . sentencia sentencias

    DOLAR  desplazar e ir al estado 35
    IDENT  desplazar e ir al estado 36

    SI        reduce usando la regla 36 ($@11)
    MIENTRAS  reduce usando la regla 39 ($@13)
    LEER      reduce usando la regla 41 ($@14)
    ESCRIBIR  reduce usando la regla 43 ($@15)
    PARA      reduce usando la regla 45 ($@16)
    $default  reduce usando la regla 33 ($@10)

    variable         ir al estado 37
    sentencia        ir al estado 38
    $@10             ir al estado 39
    $@11             ir al estado 40
    $@13             ir al estado 41
    $@14             ir al estado 42
    $@15             ir al estado 43
    $@16             ir al estado 44
    asignacion       ir al estado 45
    llamada_funcion  ir al estado 46


Estado 29

   24 cabecera_subprograma: PROCEDIMIENTO . IDENT $@7 PARIZQ lista_parametros PARDER $@8 PUNTOYCOMA
   25                     | PROCEDIMIENTO . IDENT PUNTOYCOMA

    IDENT  desplazar e ir al estado 47


Estado 30

   21 declar_subprog: $@5 cabecera_subprograma . $@6 INICIO sentencias FIN PUNTOYCOMA

    $default  reduce usando la regla 20 ($@6)

    $@6  ir al estado 48


Estado 31

   11 cuerpo_declar_variables: tipo lista_variables PUNTOYCOMA .

    $default  reduce usando la regla 11 (cuerpo_declar_variables)


Estado 32

   14 lista_variables: variable error . lista_variables

    IDENT  desplazar e ir al estado 24

    lista_variables  ir al estado 49
    variable         ir al estado 26


Estado 33

   13 lista_variables: variable COMA . lista_variables

    IDENT  desplazar e ir al estado 24

    lista_variables  ir al estado 50
    variable         ir al estado 26


Estado 34

    5 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs $@3 sentencias FINBLOQUE .

    $default  reduce usando la regla 5 (bloque)


Estado 35

   49 sentencia: DOLAR . variable PUNTOYCOMA

    IDENT  desplazar e ir al estado 24

    variable  ir al estado 51


Estado 36

   16 variable: IDENT .
   90 llamada_funcion: IDENT . PARIZQ $@24 lista_expresiones PARDER PUNTOYCOMA
   91                | IDENT . PARIZQ PARDER PUNTOYCOMA

    PARIZQ  desplazar e ir al estado 52

    $default  reduce usando la regla 16 (variable)


Estado 37

   48 sentencia: variable . AVANRETR PUNTOYCOMA
   50 asignacion: variable . ASIGNACION expresion PUNTOYCOMA

    ASIGNACION  desplazar e ir al estado 53
    AVANRETR    desplazar e ir al estado 54


Estado 38

   31 sentencias: $@9 sentencia . sentencias

    FINBLOQUE  reduce usando la regla 32 (sentencias)
    FIN        reduce usando la regla 32 (sentencias)
    $default   reduce usando la regla 30 ($@9)

    sentencias  ir al estado 55
    $@9         ir al estado 28


Estado 39

   34 sentencia: $@10 . bloque

    INICIOBLOQUE  desplazar e ir al estado 5

    bloque  ir al estado 56


Estado 40

   38 sentencia: $@11 . si PUNTOYCOMA $@12

    SI  desplazar e ir al estado 57

    si  ir al estado 58


Estado 41

   40 sentencia: $@13 . mientras

    MIENTRAS  desplazar e ir al estado 59

    mientras  ir al estado 60


Estado 42

   42 sentencia: $@14 . entrada

    LEER  desplazar e ir al estado 61

    entrada  ir al estado 62


Estado 43

   44 sentencia: $@15 . salida

    ESCRIBIR  desplazar e ir al estado 63

    salida  ir al estado 64


Estado 44

   46 sentencia: $@16 . for

    PARA  desplazar e ir al estado 65

    for  ir al estado 66


Estado 45

   35 sentencia: asignacion .

    $default  reduce usando la regla 35 (sentencia)


Estado 46

   47 sentencia: llamada_funcion .

    $default  reduce usando la regla 47 (sentencia)


Estado 47

   24 cabecera_subprograma: PROCEDIMIENTO IDENT . $@7 PARIZQ lista_parametros PARDER $@8 PUNTOYCOMA
   25                     | PROCEDIMIENTO IDENT . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 67

    $default  reduce usando la regla 22 ($@7)

    $@7  ir al estado 68


Estado 48

   21 declar_subprog: $@5 cabecera_subprograma $@6 . INICIO sentencias FIN PUNTOYCOMA

    INICIO  desplazar e ir al estado 69


Estado 49

   14 lista_variables: variable error lista_variables .

    $default  reduce usando la regla 14 (lista_variables)


Estado 50

   13 lista_variables: variable COMA lista_variables .

    $default  reduce usando la regla 13 (lista_variables)


Estado 51

   49 sentencia: DOLAR variable . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 70


Estado 52

   90 llamada_funcion: IDENT PARIZQ . $@24 lista_expresiones PARDER PUNTOYCOMA
   91                | IDENT PARIZQ . PARDER PUNTOYCOMA

    PARDER  desplazar e ir al estado 71

    $default  reduce usando la regla 89 ($@24)

    $@24  ir al estado 72


Estado 53

   50 asignacion: variable ASIGNACION . expresion PUNTOYCOMA

    error          desplazar e ir al estado 73
    SUMRES         desplazar e ir al estado 74
    OPUNARIO       desplazar e ir al estado 75
    CORIZQ         desplazar e ir al estado 76
    CONSTENTERA    desplazar e ir al estado 77
    CONSTLOGICA    desplazar e ir al estado 78
    CONSTREAL      desplazar e ir al estado 79
    CONSTCARACTER  desplazar e ir al estado 80
    PARIZQ         desplazar e ir al estado 81
    IDENT          desplazar e ir al estado 24

    variable   ir al estado 82
    expresion  ir al estado 83
    constante  ir al estado 84


Estado 54

   48 sentencia: variable AVANRETR . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 85


Estado 55

   31 sentencias: $@9 sentencia sentencias .

    $default  reduce usando la regla 31 (sentencias)


Estado 56

   34 sentencia: $@10 bloque .

    $default  reduce usando la regla 34 (sentencia)


Estado 57

   51 si: SI . PARIZQ expresion PARDER ENTONCES sentencia
   54   | SI . PARIZQ expresion PARDER ENTONCES sentencia @17 SINO $@18 sentencia

    PARIZQ  desplazar e ir al estado 86


Estado 58

   38 sentencia: $@11 si . PUNTOYCOMA $@12

    PUNTOYCOMA  desplazar e ir al estado 87


Estado 59

   56 mientras: MIENTRAS . PARIZQ expresion PARDER $@19 sentencia PUNTOYCOMA

    PARIZQ  desplazar e ir al estado 88


Estado 60

   40 sentencia: $@13 mientras .

    $default  reduce usando la regla 40 (sentencia)


Estado 61

   58 entrada: LEER . $@20 lista_variables PUNTOYCOMA

    $default  reduce usando la regla 57 ($@20)

    $@20  ir al estado 89


Estado 62

   42 sentencia: $@14 entrada .

    $default  reduce usando la regla 42 (sentencia)


Estado 63

   60 salida: ESCRIBIR . $@21 lista_expresiones_cad PUNTOYCOMA

    $default  reduce usando la regla 59 ($@21)

    $@21  ir al estado 90


Estado 64

   44 sentencia: $@15 salida .

    $default  reduce usando la regla 44 (sentencia)


Estado 65

   63 for: PARA . variable DOSP ASIGNACION expresion HASTA expresion HACER INICIO $@22 sentencia $@23 FIN PUNTOYCOMA

    IDENT  desplazar e ir al estado 24

    variable  ir al estado 91


Estado 66

   46 sentencia: $@16 for .

    $default  reduce usando la regla 46 (sentencia)


Estado 67

   25 cabecera_subprograma: PROCEDIMIENTO IDENT PUNTOYCOMA .

    $default  reduce usando la regla 25 (cabecera_subprograma)


Estado 68

   24 cabecera_subprograma: PROCEDIMIENTO IDENT $@7 . PARIZQ lista_parametros PARDER $@8 PUNTOYCOMA

    PARIZQ  desplazar e ir al estado 92


Estado 69

   21 declar_subprog: $@5 cabecera_subprograma $@6 INICIO . sentencias FIN PUNTOYCOMA

    FIN       reduce usando la regla 32 (sentencias)
    $default  reduce usando la regla 30 ($@9)

    sentencias  ir al estado 93
    $@9         ir al estado 28


Estado 70

   49 sentencia: DOLAR variable PUNTOYCOMA .

    $default  reduce usando la regla 49 (sentencia)


Estado 71

   91 llamada_funcion: IDENT PARIZQ PARDER . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 94


Estado 72

   90 llamada_funcion: IDENT PARIZQ $@24 . lista_expresiones PARDER PUNTOYCOMA

    error          desplazar e ir al estado 73
    SUMRES         desplazar e ir al estado 74
    OPUNARIO       desplazar e ir al estado 75
    CORIZQ         desplazar e ir al estado 76
    CONSTENTERA    desplazar e ir al estado 77
    CONSTLOGICA    desplazar e ir al estado 78
    CONSTREAL      desplazar e ir al estado 79
    CONSTCARACTER  desplazar e ir al estado 80
    PARIZQ         desplazar e ir al estado 81
    IDENT          desplazar e ir al estado 24

    variable           ir al estado 82
    expresion          ir al estado 95
    lista_expresiones  ir al estado 96
    constante          ir al estado 84


Estado 73

   78 expresion: error .

    $default  reduce usando la regla 78 (expresion)


Estado 74

   66 expresion: SUMRES . expresion

    error          desplazar e ir al estado 73
    SUMRES         desplazar e ir al estado 74
    OPUNARIO       desplazar e ir al estado 75
    CORIZQ         desplazar e ir al estado 76
    CONSTENTERA    desplazar e ir al estado 77
    CONSTLOGICA    desplazar e ir al estado 78
    CONSTREAL      desplazar e ir al estado 79
    CONSTCARACTER  desplazar e ir al estado 80
    PARIZQ         desplazar e ir al estado 81
    IDENT          desplazar e ir al estado 24

    variable   ir al estado 82
    expresion  ir al estado 97
    constante  ir al estado 84


Estado 75

   65 expresion: OPUNARIO . expresion

    error          desplazar e ir al estado 73
    SUMRES         desplazar e ir al estado 74
    OPUNARIO       desplazar e ir al estado 75
    CORIZQ         desplazar e ir al estado 76
    CONSTENTERA    desplazar e ir al estado 77
    CONSTLOGICA    desplazar e ir al estado 78
    CONSTREAL      desplazar e ir al estado 79
    CONSTCARACTER  desplazar e ir al estado 80
    PARIZQ         desplazar e ir al estado 81
    IDENT          desplazar e ir al estado 24

    variable   ir al estado 82
    expresion  ir al estado 98
    constante  ir al estado 84


Estado 76

   77 expresion: CORIZQ . agregado CORDER

    CONSTENTERA    desplazar e ir al estado 99
    CONSTLOGICA    desplazar e ir al estado 100
    CONSTREAL      desplazar e ir al estado 101
    CONSTCARACTER  desplazar e ir al estado 102
    CONSTCADENA    desplazar e ir al estado 103

    agregado             ir al estado 104
    agregado_enteros     ir al estado 105
    agregado_reales      ir al estado 106
    agregado_caracteres  ir al estado 107
    agregado_booleanos   ir al estado 108
    agregado_cadenas     ir al estado 109


Estado 77

   85 constante: CONSTENTERA .

    $default  reduce usando la regla 85 (constante)


Estado 78

   86 constante: CONSTLOGICA .

    $default  reduce usando la regla 86 (constante)


Estado 79

   87 constante: CONSTREAL .

    $default  reduce usando la regla 87 (constante)


Estado 80

   88 constante: CONSTCARACTER .

    $default  reduce usando la regla 88 (constante)


Estado 81

   64 expresion: PARIZQ . expresion PARDER

    error          desplazar e ir al estado 73
    SUMRES         desplazar e ir al estado 74
    OPUNARIO       desplazar e ir al estado 75
    CORIZQ         desplazar e ir al estado 76
    CONSTENTERA    desplazar e ir al estado 77
    CONSTLOGICA    desplazar e ir al estado 78
    CONSTREAL      desplazar e ir al estado 79
    CONSTCARACTER  desplazar e ir al estado 80
    PARIZQ         desplazar e ir al estado 81
    IDENT          desplazar e ir al estado 24

    variable   ir al estado 82
    expresion  ir al estado 110
    constante  ir al estado 84


Estado 82

   75 expresion: variable .

    $default  reduce usando la regla 75 (expresion)


Estado 83

   50 asignacion: variable ASIGNACION expresion . PUNTOYCOMA
   67 expresion: expresion . OPBINARIO expresion
   68          | expresion . OPOR expresion
   69          | expresion . OPRELACIONAL expresion
   70          | expresion . SUMRES expresion
   71          | expresion . OPAND expresion
   72          | expresion . OPBINLISTA expresion
   73          | expresion . ARROBA expresion
   74          | expresion . ARROBA expresion MASMAS expresion

    OPOR          desplazar e ir al estado 111
    OPAND         desplazar e ir al estado 112
    OPRELACIONAL  desplazar e ir al estado 113
    SUMRES        desplazar e ir al estado 114
    OPBINARIO     desplazar e ir al estado 115
    OPBINLISTA    desplazar e ir al estado 116
    ARROBA        desplazar e ir al estado 117
    PUNTOYCOMA    desplazar e ir al estado 118


Estado 84

   76 expresion: constante .

    $default  reduce usando la regla 76 (expresion)


Estado 85

   48 sentencia: variable AVANRETR PUNTOYCOMA .

    $default  reduce usando la regla 48 (sentencia)


Estado 86

   51 si: SI PARIZQ . expresion PARDER ENTONCES sentencia
   54   | SI PARIZQ . expresion PARDER ENTONCES sentencia @17 SINO $@18 sentencia

    error          desplazar e ir al estado 73
    SUMRES         desplazar e ir al estado 74
    OPUNARIO       desplazar e ir al estado 75
    CORIZQ         desplazar e ir al estado 76
    CONSTENTERA    desplazar e ir al estado 77
    CONSTLOGICA    desplazar e ir al estado 78
    CONSTREAL      desplazar e ir al estado 79
    CONSTCARACTER  desplazar e ir al estado 80
    PARIZQ         desplazar e ir al estado 81
    IDENT          desplazar e ir al estado 24

    variable   ir al estado 82
    expresion  ir al estado 119
    constante  ir al estado 84


Estado 87

   38 sentencia: $@11 si PUNTOYCOMA . $@12

    $default  reduce usando la regla 37 ($@12)

    $@12  ir al estado 120


Estado 88

   56 mientras: MIENTRAS PARIZQ . expresion PARDER $@19 sentencia PUNTOYCOMA

    error          desplazar e ir al estado 73
    SUMRES         desplazar e ir al estado 74
    OPUNARIO       desplazar e ir al estado 75
    CORIZQ         desplazar e ir al estado 76
    CONSTENTERA    desplazar e ir al estado 77
    CONSTLOGICA    desplazar e ir al estado 78
    CONSTREAL      desplazar e ir al estado 79
    CONSTCARACTER  desplazar e ir al estado 80
    PARIZQ         desplazar e ir al estado 81
    IDENT          desplazar e ir al estado 24

    variable   ir al estado 82
    expresion  ir al estado 121
    constante  ir al estado 84


Estado 89

   58 entrada: LEER $@20 . lista_variables PUNTOYCOMA

    IDENT  desplazar e ir al estado 24

    lista_variables  ir al estado 122
    variable         ir al estado 26


Estado 90

   60 salida: ESCRIBIR $@21 . lista_expresiones_cad PUNTOYCOMA

    error          desplazar e ir al estado 73
    SUMRES         desplazar e ir al estado 74
    OPUNARIO       desplazar e ir al estado 75
    CORIZQ         desplazar e ir al estado 76
    CONSTENTERA    desplazar e ir al estado 77
    CONSTLOGICA    desplazar e ir al estado 78
    CONSTREAL      desplazar e ir al estado 79
    CONSTCARACTER  desplazar e ir al estado 80
    CONSTCADENA    desplazar e ir al estado 123
    PARIZQ         desplazar e ir al estado 81
    IDENT          desplazar e ir al estado 24

    variable               ir al estado 82
    expresion              ir al estado 124
    lista_expresiones_cad  ir al estado 125
    exp_cad                ir al estado 126
    constante              ir al estado 84


Estado 91

   63 for: PARA variable . DOSP ASIGNACION expresion HASTA expresion HACER INICIO $@22 sentencia $@23 FIN PUNTOYCOMA

    DOSP  desplazar e ir al estado 127


Estado 92

   24 cabecera_subprograma: PROCEDIMIENTO IDENT $@7 PARIZQ . lista_parametros PARDER $@8 PUNTOYCOMA

    IDENT  desplazar e ir al estado 24

    lista_variables   ir al estado 128
    variable          ir al estado 26
    lista_parametros  ir al estado 129
    parametro         ir al estado 130


Estado 93

   21 declar_subprog: $@5 cabecera_subprograma $@6 INICIO sentencias . FIN PUNTOYCOMA

    FIN  desplazar e ir al estado 131


Estado 94

   91 llamada_funcion: IDENT PARIZQ PARDER PUNTOYCOMA .

    $default  reduce usando la regla 91 (llamada_funcion)


Estado 95

   67 expresion: expresion . OPBINARIO expresion
   68          | expresion . OPOR expresion
   69          | expresion . OPRELACIONAL expresion
   70          | expresion . SUMRES expresion
   71          | expresion . OPAND expresion
   72          | expresion . OPBINLISTA expresion
   73          | expresion . ARROBA expresion
   74          | expresion . ARROBA expresion MASMAS expresion
   79 lista_expresiones: expresion . COMA lista_expresiones
   80                  | expresion .

    OPOR          desplazar e ir al estado 111
    OPAND         desplazar e ir al estado 112
    OPRELACIONAL  desplazar e ir al estado 113
    SUMRES        desplazar e ir al estado 114
    OPBINARIO     desplazar e ir al estado 115
    OPBINLISTA    desplazar e ir al estado 116
    ARROBA        desplazar e ir al estado 117
    COMA          desplazar e ir al estado 132

    $default  reduce usando la regla 80 (lista_expresiones)


Estado 96

   90 llamada_funcion: IDENT PARIZQ $@24 lista_expresiones . PARDER PUNTOYCOMA

    PARDER  desplazar e ir al estado 133


Estado 97

   66 expresion: SUMRES expresion .
   67          | expresion . OPBINARIO expresion
   68          | expresion . OPOR expresion
   69          | expresion . OPRELACIONAL expresion
   70          | expresion . SUMRES expresion
   71          | expresion . OPAND expresion
   72          | expresion . OPBINLISTA expresion
   73          | expresion . ARROBA expresion
   74          | expresion . ARROBA expresion MASMAS expresion

    OPBINLISTA  desplazar e ir al estado 116
    ARROBA      desplazar e ir al estado 117

    $default  reduce usando la regla 66 (expresion)


Estado 98
